--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,21 +1,23 @@
 
 .navbar{
-position: fixed;
-top: 0;
+position: absolute;
+top: 0px;
 width: 100%;
-height: 30px;
+height: 50px;
 padding: 20px;
 display: flex;
 justify-content: space-between;
 background-color: #111;
 }
 .logo{
-    position: fixed;
+    position: absolute;
+    top: 14px;
     left: 20px;
     width: 80px;
 }
 .avatar{
     position: fixed;
     right: 20px;
+    top: 14px;
     width: 30px;
 }
